tarif/contacts page

--- a/about.html
+++ b/about.html
@@ -64,100 +64,18 @@
 <main>
     <section class="page__title">
         <div class="page__title-body container">
-            <h1 class="title">Новости</h1>
+            <h1 class="title">О Предприятии</h1>
         </div>
     </section>
 
     <section class="page__content">
-       <div class="container">
-           <div class="news__row row">
-               <div class="news__row-item box">
-                   <img src="images/main/1.webp" alt="" class="item__image image">
-                   <div class="item__body">
-                       <a href="#" class="item__body-link">Городская баня возобновляет работу с 18 августа в прежнем режиме</a>
-                   </div>
-                   <span class="item__date">20 февраля 2023</span>
-               </div>
-               <div class="news__row-item box">
-                   <img src="images/main/1.webp" alt="" class="item__image image">
-                   <div class="item__body">
-                       <a href="#" class="item__body-link">Городская баня возобновляет работу с 18 августа в прежнем режиме</a>
-                   </div>
-                   <span class="item__date">20 февраля 2023</span>
-               </div>
-               <div class="news__row-item box">
-                   <img src="images/main/1.webp" alt="" class="item__image image">
-                   <div class="item__body">
-                       <a href="#" class="item__body-link">Городская баня возобновляет работу с 18 августа в прежнем режиме</a>
-                   </div>
-                   <span class="item__date">20 февраля 2023</span>
-               </div>
-               <div class="news__row-item box">
-                   <img src="images/main/1.webp" alt="" class="item__image image">
-                   <div class="item__body">
-                       <a href="#" class="item__body-link">Городская баня возобновляет работу с 18 августа в прежнем режиме</a>
-                   </div>
-                   <span class="item__date">20 февраля 2023</span>
-               </div>
-               <div class="news__row-item box">
-                   <img src="images/main/1.webp" alt="" class="item__image image">
-                   <div class="item__body">
-                       <a href="#" class="item__body-link">Городская баня возобновляет работу с 18 августа в прежнем режиме</a>
-                   </div>
-                   <span class="item__date">20 февраля 2023</span>
-               </div>
-               <div class="news__row-item box">
-                   <img src="images/main/1.webp" alt="" class="item__image image">
-                   <div class="item__body">
-                       <a href="#" class="item__body-link">Городская баня возобновляет работу с 18 августа в прежнем режиме</a>
-                   </div>
-                   <span class="item__date">20 февраля 2023</span>
-               </div>
-               <div class="news__row-item box">
-                   <img src="images/main/1.webp" alt="" class="item__image image">
-                   <div class="item__body">
-                       <a href="#" class="item__body-link">Городская баня возобновляет работу с 18 августа в прежнем режиме</a>
-                   </div>
-                   <span class="item__date">20 февраля 2023</span>
-               </div>
-               <div class="news__row-item box">
-                   <img src="images/main/1.webp" alt="" class="item__image image">
-                   <div class="item__body">
-                       <a href="#" class="item__body-link">Городская баня возобновляет работу с 18 августа в прежнем режиме</a>
-                   </div>
-                   <span class="item__date">20 февраля 2023</span>
-               </div>
-               <div class="news__row-item box">
-                   <img src="images/main/1.webp" alt="" class="item__image image">
-                   <div class="item__body">
-                       <a href="#" class="item__body-link">Городская баня возобновляет работу с 18 августа в прежнем режиме</a>
-                   </div>
-                   <span class="item__date">20 февраля 2023</span>
-               </div>
-               <div class="news__row-item box">
-                   <img src="images/main/1.webp" alt="" class="item__image image">
-                   <div class="item__body">
-                       <a href="#" class="item__body-link">Городская баня возобновляет работу с 18 августа в прежнем режиме</a>
-                   </div>
-                   <span class="item__date">20 февраля 2023</span>
-               </div>
-               <div class="news__row-item box">
-                   <img src="images/main/1.webp" alt="" class="item__image image">
-                   <div class="item__body">
-                       <a href="#" class="item__body-link">Городская баня возобновляет работу с 18 августа в прежнем режиме</a>
-                   </div>
-                   <span class="item__date">20 февраля 2023</span>
-               </div>
-               <div class="news__row-item box">
-                   <img src="images/main/1.webp" alt="" class="item__image image">
-                   <div class="item__body">
-                       <a href="#" class="item__body-link">Городская баня возобновляет работу с 18 августа в прежнем режиме</a>
-                   </div>
-                   <span class="item__date">20 февраля 2023</span>
-               </div>
-           </div>
-       </div>
+        <div class="container">
+            <div class="company box">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab architecto deleniti dolorem excepturi explicabo nemo omnis totam vero. Amet, asperiores assumenda ducimus earum explicabo facilis fuga, ipsam maiores modi quidem recusandae, sint vel vero? Consectetur eligendi excepturi ipsam iure nam pariatur, quae quis reiciendis repellat sequi veniam vitae voluptatem voluptatum. Amet iusto labore maxime nostrum quae rem, reprehenderit sed sequi soluta voluptate. Aliquam, animi consequatur, cumque, dicta distinctio dolor earum expedita harum in labore libero minus provident quis suscipit vero! Adipisci asperiores aspernatur beatae dolor enim error, ipsum iusto labore, nihil nulla tempore vel velit. Aspernatur at autem deleniti ducimus eius eum exercitationem, harum id illo iusto laudantium magnam magni maxime molestias nam nulla odio odit omnis placeat provident quibusdam quis quo quod reprehenderit saepe similique sint soluta tempore tenetur unde vel velit voluptate voluptatem? Ad at delectus, ducimus eum laudantium minus natus nesciunt nobis, numquam quidem quis reprehenderit sequi sint velit voluptates. A atque aut autem blanditiis cupiditate delectus eius exercitationem explicabo facere illo ipsum iste, laborum magni molestiae neque praesentium quae quasi quod, rem reprehenderit sapiente tempora unde ut veniam vitae. Accusantium atque commodi debitis deleniti neque nulla obcaecati quae ut vel voluptate? Aspernatur atque dolore doloribus eum exercitationem, libero odio provident, quibusdam quidem quod repellat reprehenderit rerum sed suscipit voluptas? Earum facere impedit iure pariatur voluptatum. Adipisci, aliquam animi doloribus fugiat sequi sint suscipit? Accusamus alias aut autem beatae consequuntur culpa dignissimos dolore ea eius enim et eum ex fugit in incidunt ipsa ipsum iste itaque labore laudantium maiores maxime nemo numquam odit pariatur placeat quaerat quisquam quod ratione repellendus repudiandae saepe, suscipit tempore temporibus ut veritatis voluptas? Aperiam autem dicta, distinctio doloribus eligendi expedita harum incidunt magnam officia officiis porro quae ratione velit? Accusantium blanditiis culpa, dolor dolorum et illum in iure labore magni maiores modi officia possimus quod, rerum tenetur totam voluptatem. A architecto cumque deserunt dolore ea earum fugiat iure molestiae, molestias neque, nisi numquam obcaecati officiis optio pariatur praesentium quia sit sunt suscipit tempora ut vel veniam vero! Ab aliquid aspernatur, atque commodi consequatur deleniti, ex fugit iure molestiae numquam placeat quasi quos repudiandae vitae voluptatem. Libero magnam officiis placeat quia quisquam quo, sequi ullam. Distinctio esse est laudantium nostrum quidem! Animi at, debitis dolore, earum eligendi eos expedita hic in laborum officiis, omnis porro quasi ratione temporibus unde vel voluptas voluptatibus? A consequatur dolores ea et, modi nemo omnis quod repellat repellendus sit! Aperiam aut consectetur deleniti eum facilis fuga fugiat molestiae nesciunt nobis quaerat recusandae reiciendis, sapiente veritatis? Assumenda doloremque excepturi obcaecati! Accusantium aperiam est itaque quos ullam, vel voluptas? Eos in modi nesciunt odit ratione, recusandae? Corporis cumque dignissimos ea, expedita perferendis voluptatum. Esse fugiat harum magni voluptatibus. Alias aliquam amet assumenda beatae consequuntur debitis, delectus dicta dolorem ducimus eaque eum fugiat inventore ipsa, magnam maiores molestiae numquam obcaecati perspiciatis, placeat quae quam quisquam saepe similique suscipit totam unde voluptas. Ad atque consequatur, dolores dolorum ducimus explicabo hic illum laboriosam, magnam maiores nesciunt nisi, odio porro quisquam quo sed tempora.
+            </div>
+        </div>
     </section>
+
 </main>
 
 <footer >
