--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
 				</a>
 				<nav class="header__main-navigation">
 					<ul class="header__navigation-list">
-						<li class="header__navigation-list__item"><a href="" class="nav__link">О предприятии</a></li>
+						<li class="header__navigation-list__item"><a href="about.html" class="nav__link">О предприятии</a></li>
 						<li class="header__navigation-list__item"><a href="news.html" class="nav__link">Новости</a></li>
 						<li class="header__navigation-list__item">
 							<a class="nav__link">Абонентам</a>
 							<ul class="navigation__sub-menu box">
-								<li><a href="#" class="nav__link">Тарифы</a></li>
+								<li><a href="tarif.html" class="nav__link">Тарифы</a></li>
 								<li><a href="#" class="nav__link">Нормативы</a></li>
 								<li><a href="#" class="nav__link">Услуги</a></li>
 								<li><a href="#" class="nav__link">Качество воды</a></li>
@@ -154,7 +154,16 @@
 										<button class="close__btn">+</button>
 										<h2 class="item__title">Уважаемые Абоненты!
 										</h2>
-										<p>На данный момент квитанции за водоснабжение и водоотведение Вы можете оплатить одним из следующих способов:</p>
+										<div class="item__content">
+											<p>На данный момент квитанции за водоснабжение и водоотведение Вы можете оплатить одним из следующих способов:</p>
+											<ul >
+												<li>Касса по адресу г. Яранск ул. Кирова 36</li>
+												<li>Банк Сбер онлайн</li>
+												<li>Банк ВТБ</li>
+												<li>Банк Хлынов</li>
+												<li>Банк Россельхоз</li>
+											</ul>
+										</div>
 									</div>
 								</div>
 
@@ -166,9 +175,6 @@
 										<p>На данный момент работ на сетях водоснабжения не проводится</p>
 									</div>
 								</div>
-
-
-
 
 								<div data-box="meters" class="services__content-item bl box">
 									<div class="item__body">
