--- a/_news.html
+++ b/_news.html
@@ -64,100 +64,33 @@
 <main>
     <section class="page__title">
         <div class="page__title-body container">
-            <h1 class="title">Новости</h1>
+            <h1 class="title">Городская баня возобновляет работу с 18 августа</h1>
         </div>
     </section>
 
     <section class="page__content">
-       <div class="container">
-           <div class="news__row row">
-               <div class="news__row-item box">
-                   <img src="images/main/1.webp" alt="" class="item__image image">
-                   <div class="item__body">
-                       <a href="_news.html" class="item__body-link">Городская баня возобновляет работу с 18 августа в прежнем режиме</a>
-                   </div>
-                   <span class="item__date">20 февраля 2023</span>
-               </div>
-               <div class="news__row-item box">
-                   <img src="images/main/1.webp" alt="" class="item__image image">
-                   <div class="item__body">
-                       <a href="#" class="item__body-link">Городская баня возобновляет работу с 18 августа в прежнем режиме</a>
-                   </div>
-                   <span class="item__date">20 февраля 2023</span>
-               </div>
-               <div class="news__row-item box">
-                   <img src="images/main/1.webp" alt="" class="item__image image">
-                   <div class="item__body">
-                       <a href="#" class="item__body-link">Городская баня возобновляет работу с 18 августа в прежнем режиме</a>
-                   </div>
-                   <span class="item__date">20 февраля 2023</span>
-               </div>
-               <div class="news__row-item box">
-                   <img src="images/main/1.webp" alt="" class="item__image image">
-                   <div class="item__body">
-                       <a href="#" class="item__body-link">Городская баня возобновляет работу с 18 августа в прежнем режиме</a>
-                   </div>
-                   <span class="item__date">20 февраля 2023</span>
-               </div>
-               <div class="news__row-item box">
-                   <img src="images/main/1.webp" alt="" class="item__image image">
-                   <div class="item__body">
-                       <a href="#" class="item__body-link">Городская баня возобновляет работу с 18 августа в прежнем режиме</a>
-                   </div>
-                   <span class="item__date">20 февраля 2023</span>
-               </div>
-               <div class="news__row-item box">
-                   <img src="images/main/1.webp" alt="" class="item__image image">
-                   <div class="item__body">
-                       <a href="#" class="item__body-link">Городская баня возобновляет работу с 18 августа в прежнем режиме</a>
-                   </div>
-                   <span class="item__date">20 февраля 2023</span>
-               </div>
-               <div class="news__row-item box">
-                   <img src="images/main/1.webp" alt="" class="item__image image">
-                   <div class="item__body">
-                       <a href="#" class="item__body-link">Городская баня возобновляет работу с 18 августа в прежнем режиме</a>
-                   </div>
-                   <span class="item__date">20 февраля 2023</span>
-               </div>
-               <div class="news__row-item box">
-                   <img src="images/main/1.webp" alt="" class="item__image image">
-                   <div class="item__body">
-                       <a href="#" class="item__body-link">Городская баня возобновляет работу с 18 августа в прежнем режиме</a>
-                   </div>
-                   <span class="item__date">20 февраля 2023</span>
-               </div>
-               <div class="news__row-item box">
-                   <img src="images/main/1.webp" alt="" class="item__image image">
-                   <div class="item__body">
-                       <a href="#" class="item__body-link">Городская баня возобновляет работу с 18 августа в прежнем режиме</a>
-                   </div>
-                   <span class="item__date">20 февраля 2023</span>
-               </div>
-               <div class="news__row-item box">
-                   <img src="images/main/1.webp" alt="" class="item__image image">
-                   <div class="item__body">
-                       <a href="#" class="item__body-link">Городская баня возобновляет работу с 18 августа в прежнем режиме</a>
-                   </div>
-                   <span class="item__date">20 февраля 2023</span>
-               </div>
-               <div class="news__row-item box">
-                   <img src="images/main/1.webp" alt="" class="item__image image">
-                   <div class="item__body">
-                       <a href="#" class="item__body-link">Городская баня возобновляет работу с 18 августа в прежнем режиме</a>
-                   </div>
-                   <span class="item__date">20 февраля 2023</span>
-               </div>
-               <div class="news__row-item box">
-                   <img src="images/main/1.webp" alt="" class="item__image image">
-                   <div class="item__body">
-                       <a href="#" class="item__body-link">Городская баня возобновляет работу с 18 августа в прежнем режиме</a>
-                   </div>
-                   <span class="item__date">20 февраля 2023</span>
-               </div>
-           </div>
-       </div>
+        <div class="page__content-wrapper row container">
+
+            <article class="page__content-body">
+                <div class="content__row box">
+                    <h3>Добрый день!</h3>
+                    <p>
+                        ВНИМАНИЕ!
+                        Городская баня возобновляет работу с 18 августа в прежнем режиме:
+                        </p>
+                    <ul>
+                        <li>Четверг – женский день  12:00 – 20:00</li>
+                        <li> Пятница – мужской день 12:00 – 20:00</li>
+                        <li> Суббота – женский день 10:00 – 20:00</li>
+                        <li> Воскресение – мужской день 10:00 – 20:00</li>
+                        <li> Касса работает до 19:00</li>
+                        <li> Стоимость помывки – 200 руб.</li>
+                    </ul>
+                </div>
+            </article>
+        </div>
     </section>
+
 </main>
 
 <footer >
