--- a/contacts.html
+++ b/contacts.html
@@ -42,15 +42,15 @@
             </a>
             <nav class="header__main-navigation">
                 <ul class="header__navigation-list">
-                    <li class="header__navigation-list__item"><a href="" class="nav__link">О предприятии</a></li>
+                    <li class="header__navigation-list__item"><a href="about.html" class="nav__link">О предприятии</a></li>
                     <li class="header__navigation-list__item"><a href="news.html" class="nav__link">Новости</a></li>
                     <li class="header__navigation-list__item">
                         <a class="nav__link">Абонентам</a>
                         <ul class="navigation__sub-menu box">
-                            <li><a href="#" class="nav__link">Тарифы</a></li>
-                            <li><a href="#" class="nav__link">Нормативы</a></li>
+                            <li><a href="tarif.html" class="nav__link">Тарифы</a></li>
+                            <li><a href="standards.html" class="nav__link">Нормативы</a></li>
                             <li><a href="#" class="nav__link">Услуги</a></li>
-                            <li><a href="#" class="nav__link">Качество воды</a></li>
+                            <li><a href="#" class="nav__link">Показатели качества</a></li>
                         </ul>
                     </li>
                     <li class="header__navigation-list__item"><a href="" class="nav__link">Документы</a></li>
@@ -71,7 +71,7 @@
     <section class="page__content">
         <div class="container">
             <div class="page__content-body">
-                <div class="content__row box ">
+                <div class="content__row box">
                     <div class="contacts__item-row row">
                         <div class="contacts__item-col">Фактический адрес</div>
                         <div class="contacts__item-col">Кировская обл, р-н. Яранский, г. Яранск, ул. Кирова, д. 36</div>
@@ -79,6 +79,10 @@
                     <div class="contacts__item-row row">
                         <div class="contacts__item-col">Адрес электронной почты</div>
                         <div class="contacts__item-col">vodokanal.yaransk@yandex.ru</div>
+                    </div>
+                    <div class="contacts__item-row row">
+                        <div class="contacts__item-col">Социальные сети</div>
+                        <div class="contacts__item-col">https://vk.com/vodokanal_yaransk</div>
                     </div>
                     <div class="contacts__item-row row">
                         <div class="contacts__item-col">Бухгалтерия</div>
