--- a/standards.html
+++ b/standards.html
@@ -64,100 +64,36 @@
 <main>
     <section class="page__title">
         <div class="page__title-body container">
-            <h1 class="title">Новости</h1>
+            <h1 class="title">Нормативы потребления коммунальных услуг</h1>
         </div>
     </section>
 
     <section class="page__content">
-       <div class="container">
-           <div class="news__row row">
-               <div class="news__row-item box">
-                   <img src="images/main/1.webp" alt="" class="item__image image">
-                   <div class="item__body">
-                       <a href="_news.html" class="item__body-link">Городская баня возобновляет работу с 18 августа в прежнем режиме</a>
-                   </div>
-                   <span class="item__date">20 февраля 2023</span>
-               </div>
-               <div class="news__row-item box">
-                   <img src="images/main/1.webp" alt="" class="item__image image">
-                   <div class="item__body">
-                       <a href="#" class="item__body-link">Городская баня возобновляет работу с 18 августа в прежнем режиме</a>
-                   </div>
-                   <span class="item__date">20 февраля 2023</span>
-               </div>
-               <div class="news__row-item box">
-                   <img src="images/main/1.webp" alt="" class="item__image image">
-                   <div class="item__body">
-                       <a href="#" class="item__body-link">Городская баня возобновляет работу с 18 августа в прежнем режиме</a>
-                   </div>
-                   <span class="item__date">20 февраля 2023</span>
-               </div>
-               <div class="news__row-item box">
-                   <img src="images/main/1.webp" alt="" class="item__image image">
-                   <div class="item__body">
-                       <a href="#" class="item__body-link">Городская баня возобновляет работу с 18 августа в прежнем режиме</a>
-                   </div>
-                   <span class="item__date">20 февраля 2023</span>
-               </div>
-               <div class="news__row-item box">
-                   <img src="images/main/1.webp" alt="" class="item__image image">
-                   <div class="item__body">
-                       <a href="#" class="item__body-link">Городская баня возобновляет работу с 18 августа в прежнем режиме</a>
-                   </div>
-                   <span class="item__date">20 февраля 2023</span>
-               </div>
-               <div class="news__row-item box">
-                   <img src="images/main/1.webp" alt="" class="item__image image">
-                   <div class="item__body">
-                       <a href="#" class="item__body-link">Городская баня возобновляет работу с 18 августа в прежнем режиме</a>
-                   </div>
-                   <span class="item__date">20 февраля 2023</span>
-               </div>
-               <div class="news__row-item box">
-                   <img src="images/main/1.webp" alt="" class="item__image image">
-                   <div class="item__body">
-                       <a href="#" class="item__body-link">Городская баня возобновляет работу с 18 августа в прежнем режиме</a>
-                   </div>
-                   <span class="item__date">20 февраля 2023</span>
-               </div>
-               <div class="news__row-item box">
-                   <img src="images/main/1.webp" alt="" class="item__image image">
-                   <div class="item__body">
-                       <a href="#" class="item__body-link">Городская баня возобновляет работу с 18 августа в прежнем режиме</a>
-                   </div>
-                   <span class="item__date">20 февраля 2023</span>
-               </div>
-               <div class="news__row-item box">
-                   <img src="images/main/1.webp" alt="" class="item__image image">
-                   <div class="item__body">
-                       <a href="#" class="item__body-link">Городская баня возобновляет работу с 18 августа в прежнем режиме</a>
-                   </div>
-                   <span class="item__date">20 февраля 2023</span>
-               </div>
-               <div class="news__row-item box">
-                   <img src="images/main/1.webp" alt="" class="item__image image">
-                   <div class="item__body">
-                       <a href="#" class="item__body-link">Городская баня возобновляет работу с 18 августа в прежнем режиме</a>
-                   </div>
-                   <span class="item__date">20 февраля 2023</span>
-               </div>
-               <div class="news__row-item box">
-                   <img src="images/main/1.webp" alt="" class="item__image image">
-                   <div class="item__body">
-                       <a href="#" class="item__body-link">Городская баня возобновляет работу с 18 августа в прежнем режиме</a>
-                   </div>
-                   <span class="item__date">20 февраля 2023</span>
-               </div>
-               <div class="news__row-item box">
-                   <img src="images/main/1.webp" alt="" class="item__image image">
-                   <div class="item__body">
-                       <a href="#" class="item__body-link">Городская баня возобновляет работу с 18 августа в прежнем режиме</a>
-                   </div>
-                   <span class="item__date">20 февраля 2023</span>
-               </div>
-           </div>
-       </div>
+        <div class="page__content-wrapper row container">
+            <aside class="page__sidebar">
+                <div class="content__row box">
+                    <nav class="page__sidebar-nav">
+                        <ul class="page__sidebar-nav__list">
+                            <li><a href="tarif.html" class="nav__link">Тарифы</a></li>
+                            <li><a href="standards.html" class="nav__link active">Нормативы</a></li>
+                            <li><a href="services.html" class="nav__link ">Услуги</a></li>
+                            <li><a href="quality.html" class="nav__link">Показатели качества</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </aside>
+            <article class="page__content-body ">
+                <div class="content__row box">
+                    <h1>Нормативы потребления </h1>
+
+
+
+
+                </div>
+            </article>
+        </div>
     </section>
+
 </main>
 
 <footer >
