--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
 							<a class="nav__link">Абонентам</a>
 							<ul class="navigation__sub-menu box">
 								<li><a href="tarif.html" class="nav__link">Тарифы</a></li>
-								<li><a href="#" class="nav__link">Нормативы</a></li>
-								<li><a href="#" class="nav__link">Услуги</a></li>
-								<li><a href="#" class="nav__link">Качество воды</a></li>
+								<li><a href="standards.html" class="nav__link">Нормативы</a></li>
+								<li><a href="services.html" class="nav__link">Услуги</a></li>
+								<li><a href="quality.html" class="nav__link">Показатели качества</a></li>
+								<li><a href="connect.html" class="nav__link">Подключение к сетям</a></li>
 							</ul>
 						</li>
 						<li class="header__navigation-list__item"><a href="" class="nav__link">Документы</a></li>
@@ -75,16 +76,15 @@
 			<div class="container">
 				<h2 class="company__info-title title">МУП Водоканал города Яранск</h2>
 				<div class="company__info-content box">
-					<p>Рыбатекст используется дизайнерами, проектировщиками и фронтендерами, когда нужно быстро заполнить макеты или прототипы содержимым. Это тестовый контент, который не должен нести никакого смысла, лишь показать наличие самого текста или продемонстрировать типографику в деле.</p>
-					<p>Рыбатекст используется дизайнерами, проектировщиками и фронтендерами, когда нужно быстро заполнить макеты или прототипы содержимым. Это тестовый контент, который не должен нести никакого смысла, лишь показать наличие самого текста или продемонстрировать типографику в деле.  ля ля ля </p>
+					<p>На сегодняшний день МУП Водоканал является одним из крупнейших предприятий на территории Яранского городского поселения.  Предприятие обслуживает водопроводные и канализационные сети не только самого города Яранск, но населенных пунктов Яранского района.</p>
+					<p>На сегодняшний день МУП Водоканал является одним из крупнейших предприятий на территории Яранского городского поселения.  Предприятие обслуживает водопроводные и канализационные сети не только самого города Яранск, но населенных пунктов Яранского района.</p>
 				</div>
 
 				<div class="company__info-cards row">
 
 					<div class="company__info-cards__item box">
 						<img src="images/icons/waterIcon.svg" class="item__icon image"  alt="2"/>
-						<p class="item__title">Централизованная
-							водопроводная сеть</p>
+						<p class="item__title">Городская водопроводная сеть</p>
 						<span class="item__subtitle">Суммарной протяженностью:
 						103,2 км</span>
 					</div>
@@ -92,19 +92,15 @@
 
 					<div class="company__info-cards__item box">
 						<img src="images/icons/TubeIcon.svg" class="item__icon image"  alt="2"/>
-						<p class="item__title">Централизованная
-							водопроводная сеть</p>
+						<p class="item__title">Городская канализационная сеть</p>
 						<span class="item__subtitle">Суммарной протяженностью:
-						103,2 км</span>
+						43,2 км</span>
 					</div>
 
 
 					<div class="company__info-cards__item box">
 						<img src="images/icons/waterIcon.svg" class="item__icon image"  alt="2"/>
-						<p class="item__title">Централизованная
-							водопроводная сеть</p>
-						<span class="item__subtitle">Суммарной протяженностью:
-						103,2 км</span>
+						<p style="font-size: 3rem">?</p>
 					</div>
 				</div>
 
@@ -176,7 +172,7 @@
 									</div>
 								</div>
 
-								<div data-box="readings" class="services__content-item bl box active">
+								<div data-box="readings" class="services__content-item bl box ">
 								<div class="item__body">
 									<button class="close__btn">+</button>
 									<h2 class="item__title">Передача показаний
