--- a/tarif.html
+++ b/tarif.html
@@ -42,15 +42,15 @@
             </a>
             <nav class="header__main-navigation">
                 <ul class="header__navigation-list">
-                    <li class="header__navigation-list__item"><a href="" class="nav__link">О предприятии</a></li>
+                    <li class="header__navigation-list__item"><a href="about.html" class="nav__link">О предприятии</a></li>
                     <li class="header__navigation-list__item"><a href="news.html" class="nav__link">Новости</a></li>
                     <li class="header__navigation-list__item">
                         <a class="nav__link">Абонентам</a>
                         <ul class="navigation__sub-menu box">
-                            <li><a href="#" class="nav__link">Тарифы</a></li>
-                            <li><a href="#" class="nav__link">Нормативы</a></li>
+                            <li><a href="tarif.html" class="nav__link">Тарифы</a></li>
+                            <li><a href="standards.html" class="nav__link">Нормативы</a></li>
                             <li><a href="#" class="nav__link">Услуги</a></li>
-                            <li><a href="#" class="nav__link">Качество воды</a></li>
+                            <li><a href="#" class="nav__link">Показатели качества</a></li>
                         </ul>
                     </li>
                     <li class="header__navigation-list__item"><a href="" class="nav__link">Документы</a></li>
@@ -74,16 +74,16 @@
                 <div class="content__row box">
                     <nav class="page__sidebar-nav">
                         <ul class="page__sidebar-nav__list">
-                            <li><a href="#" class="nav__link active">Тарифы</a></li>
-                            <li><a href="#" class="nav__link">Нормативы</a></li>
-                            <li><a href="#" class="nav__link">Услуги</a></li>
-                            <li><a href="#" class="nav__link">Качество воды</a></li>
+                            <li><a href="tarif.html" class="nav__link active">Тарифы</a></li>
+                            <li><a href="standards.html" class="nav__link">Нормативы</a></li>
+                            <li><a href="services.html" class="nav__link ">Услуги</a></li>
+                            <li><a href="quality.html" class="nav__link">Показатели качества</a></li>
                         </ul>
                     </nav>
                 </div>
             </aside>
-            <article class="page__content-body box">
-                <div class="content__row">
+            <article class="page__content-body ">
+                <div class="content__row box">
 
                     <div class="page__accordion">
                         <div data-accordion="title" class="page__accordion-title">Водоснабжение 2023 г. Яранск</div>
