--- a/quality.html
+++ b/quality.html
@@ -49,8 +49,9 @@
                         <ul class="navigation__sub-menu box">
                             <li><a href="tarif.html" class="nav__link">Тарифы</a></li>
                             <li><a href="standards.html" class="nav__link">Нормативы</a></li>
-                            <li><a href="#" class="nav__link">Услуги</a></li>
-                            <li><a href="#" class="nav__link">Показатели качества</a></li>
+                            <li><a href="services.html" class="nav__link">Услуги</a></li>
+                            <li><a href="quality.html" class="nav__link">Показатели качества</a></li>
+                            <li><a href="connect.html" class="nav__link">Подключение к сетям</a></li>
                         </ul>
                     </li>
                     <li class="header__navigation-list__item"><a href="" class="nav__link">Документы</a></li>
@@ -78,6 +79,7 @@
                             <li><a href="standards.html" class="nav__link">Нормативы</a></li>
                             <li><a href="services.html" class="nav__link ">Услуги</a></li>
                             <li><a href="quality.html" class="nav__link active">Показатели качества</a></li>
+                            <li><a href="connect.html" class="nav__link">Подключение к сетям</a></li>
                         </ul>
                     </nav>
                 </div>
