--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 	<header class="header">
 		<div class="header__top">
 			<div class="header__top-links container">
-				<a href="#">г. Яранск ул. Кирова д. 36</a>
-				<a href="#">8 (800) 123 45 56</a>
+				<a href="https://yandex.ru/maps/org/103389193980" target="_blank">г. Яранск ул. Кирова д. 36</a>
+				<a href="tel:+7 (800) 123 45 56">8 (800) 123 45 56</a>
 			</div>
 		</div>
 		<div class="header__main">
@@ -58,12 +58,17 @@
 						<li class="header__navigation-list__item"><a href="contacts.html" class="nav__link">Контакты</a></li>
 					</ul>
 				</nav>
+
+				<nav class="mobile__navigation">
+					<div class="mobile__burger">
+						<span></span>
+					</div>
+				</nav>
 			</div>
 		</div>
 	</header>
 
 	<main>
-
 		<section class="first__screen" style="background-image: url('images/main/1.webp')">
 			<div class="first__screen-content container">
 				<div class="first__screen-title">
@@ -108,6 +113,7 @@
 		</section>
 
 		<section class="services">
+
 			<div class="container">
 				<div class="services__wrapper row">
 
@@ -127,103 +133,29 @@
 							</div>
 						</div>
 
-						<div class="services__row row">
-							<div class="services__row-item bl services__row-item--full box">
-								<p class="item__title">Передача показаний индивидуальных приборов учета</p>
-								<span class="item__subtitle">Показания принимаются с 01 по 25 число каждого месяца</span>
-								<button class="button ">Передать показания</button>
-							</div>
-							<div data-target="meters" class="services__row-item br box">
-									<img src="images/icons/meterIcon.svg" alt="" draggable="false" class="item__icon">
-									<p class="item__title">Регистрация приборов учета</p>
-								</div>
-							<div data-target="a" class="services__row-item box">
-									<img src="images/icons/meterIcon.svg" alt="" draggable="false" class="item__icon">
-									<p class="item__title">Услуги</p>
-								</div>
-						</div>
+<!--						<div class="services__row row">-->
+<!--							<div class="services__row-item bl services__row-item&#45;&#45;full box">-->
+<!--								<p class="item__title">Если остались вопросы</p>-->
+<!--								<span class="item__subtitle">воспользуйтесь формой обратной связи</span>-->
+<!--								<button class="button ">Остались вопросы</button>-->
+<!--							</div>-->
+<!--							<div data-target="meters" class="services__row-item br box">-->
+<!--									<img src="images/icons/meterIcon.svg" alt="" draggable="false" class="item__icon">-->
+<!--									<p class="item__title">Регистрация приборов учета</p>-->
+<!--								</div>-->
+<!--							<div data-target="a" class="services__row-item box">-->
+<!--									<img src="images/icons/meterIcon.svg" alt="" draggable="false" class="item__icon">-->
+<!--									<p class="item__title">Услуги</p>-->
+<!--								</div>-->
+<!--						</div>-->
 
-						<div class="services__content row">
 
-								<div data-box="payments" class="services__content-item tl box">
-									<div class="item__body">
-										<button class="close__btn">+</button>
-										<h2 class="item__title">Уважаемые Абоненты!
-										</h2>
-										<div class="item__content">
-											<p>На данный момент квитанции за водоснабжение и водоотведение Вы можете оплатить одним из следующих способов:</p>
-											<ul class="item__content-list">
-												<li>Касса по адресу г. Яранск ул. Кирова 36</li>
-												<li>Банк Сбер онлайн</li>
-												<li>Банк ВТБ</li>
-												<li>Банк Хлынов</li>
-												<li>Банк Россельхоз</li>
-											</ul>
-										</div>
-									</div>
-								</div>
 
-								<div data-box="works" class="services__content-item tr box">
-									<div class="item__body">
-										<button class="close__btn">+</button>
-										<h2 class="item__title">Уважаемые Абоненты!
-										</h2>
-										<p>На данный момент работ на сетях водоснабжения не проводится</p>
-									</div>
-								</div>
-
-								<div data-box="readings" class="services__content-item bl box ">
-								<div class="item__body">
-									<button class="close__btn">+</button>
-									<h2 class="item__title">Передача показаний
-									</h2>
-									<form action="" method="post" class="page__form">
-										<div class="form__group">
-											<label>
-												<input type="text" class="form__group-input input" placeholder="ФИО">
-											</label>
-											<label>
-												<input type="text" class="form__group-input input" placeholder="Лицевой счет">
-											</label></div>
-										<div class="form__group">
-											<label>
-												<input type="text" class="form__group-input input" placeholder="Показания прибора учета">
-											</label>
-										</div>
-										<div class="form__group">
-											<label>
-												<input type="text" class="form__group-input input" placeholder="Показания второго прибора учета">
-											</label>
-										</div>
-										<div class="form__group">
-											<button class="form__group-button button">Передать показания</button>
-										</div>
-									</form>
-								</div>
-							</div>
-
-								<div data-box="meters" class="services__content-item bl box">
-									<div class="item__body">
-										<button class="close__btn">+</button>
-										<h2 class="item__title">Уважаемые Абоненты!
-										</h2>
-										<p>На данный момент работ на сетях водоснабжения не проводится</p>
-									</div>
-								</div>
-
-								<div data-box="a" class="services__content-item br box">
-									<div class="item__body">
-										<button class="close__btn">+</button>
-										<h2 class="item__title">Уважаемые Абоненты!
-										</h2>
-										<p>На данный момент работ на сетях водоснабжения не проводится</p>
-									</div>
-								</div>
-							</div>
-						</div>
+				</div>
 
 			</div>
 		</section>
+
 
 		<section class="news">
 			<div class="container">
@@ -366,6 +298,78 @@
 			<span>2023 © МУП Водоканал г. Яранск</span>
 		</div>
 	</footer>
+	<div class="modal">
+		<div class="modal__overlay">
 
+				<div data-box="payments" class="modal__content-item box">
+					<div class="item__body">
+						<button class="close__btn">+</button>
+						<h2 class="item__title">Уважаемые Абоненты!
+						</h2>
+						<div class="item__content">
+							<p>На данный момент квитанции за водоснабжение и водоотведение Вы можете оплатить одним из следующих способов:</p>
+							<ul class="item__content-list">
+								<li>Касса по адресу г. Яранск ул. Кирова 36</li>
+								<li>Банк Сбер онлайн</li>
+								<li>Банк ВТБ</li>
+								<li>Банк Хлынов</li>
+								<li>Банк Россельхоз</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+
+				<div data-box="works" class="modal__content-item box">
+					<div class="item__body">
+						<button class="close__btn">+</button>
+						<h2 class="item__title">Уважаемые Абоненты!
+						</h2>
+						<p>На данный момент работ на сетях водоснабжения не проводится</p>
+					</div>
+				</div>
+
+				<div data-box="readings" class="modal__content-item box ">
+					<div class="item__body">
+						<button class="close__btn">+</button>
+						<h2 class="item__title">Передача показаний
+						</h2>
+						<form action="" method="post" class="page__form">
+							<div class="form__group">
+								<label>
+									<input type="text" class="form__group-input input" placeholder="ФИО">
+								</label>
+								<label>
+									<input type="text" class="form__group-input input" placeholder="Лицевой счет">
+								</label></div>
+							<div class="form__group">
+								<label>
+									<input type="text" class="form__group-input input" placeholder="Показания прибора учета">
+								</label>
+							</div>
+							<div class="form__group">
+								<label>
+									<input type="text" class="form__group-input input" placeholder="Показания второго прибора учета">
+								</label>
+							</div>
+							<div class="form__group">
+								<label>
+									<input type="checkbox" checked class="form__group-input checkbox" >
+									<span class="form__group-check">
+										<span class="form__group-agreement">
+											Я принимаю согласие на обработку <a href="">персональных данных</a>
+										</span>
+									</span>
+								</label>
+							</div>
+							<div class="form__group">
+								<button class="form__group-button button">Передать показания</button>
+							</div>
+						</form>
+					</div>
+				</div>
+
+
+		</div>
+	</div>
 </body>
 </html>
