--- a/news.html
+++ b/news.html
@@ -43,14 +43,15 @@
             <nav class="header__main-navigation">
                 <ul class="header__navigation-list">
                     <li class="header__navigation-list__item"><a href="about.html" class="nav__link">О предприятии</a></li>
-                    <li class="header__navigation-list__item"><a href="news.html" class="nav__link">Новости</a></li>
+                    <li class="header__navigation-list__item"><a href="news.html" class="nav__link active">Новости</a></li>
                     <li class="header__navigation-list__item">
                         <a class="nav__link">Абонентам</a>
                         <ul class="navigation__sub-menu box">
                             <li><a href="tarif.html" class="nav__link">Тарифы</a></li>
                             <li><a href="standards.html" class="nav__link">Нормативы</a></li>
-                            <li><a href="#" class="nav__link">Услуги</a></li>
-                            <li><a href="#" class="nav__link">Показатели качества</a></li>
+                            <li><a href="services.html" class="nav__link">Услуги</a></li>
+                            <li><a href="quality.html" class="nav__link">Показатели качества</a></li>
+                            <li><a href="connect.html" class="nav__link">Подключение к сетям</a></li>
                         </ul>
                     </li>
                     <li class="header__navigation-list__item"><a href="" class="nav__link">Документы</a></li>
