--- a/standards.html
+++ b/standards.html
@@ -49,8 +49,9 @@
                         <ul class="navigation__sub-menu box">
                             <li><a href="tarif.html" class="nav__link">Тарифы</a></li>
                             <li><a href="standards.html" class="nav__link">Нормативы</a></li>
-                            <li><a href="#" class="nav__link">Услуги</a></li>
-                            <li><a href="#" class="nav__link">Показатели качества</a></li>
+                            <li><a href="services.html" class="nav__link">Услуги</a></li>
+                            <li><a href="quality.html" class="nav__link">Показатели качества</a></li>
+                            <li><a href="connect.html" class="nav__link">Подключение к сетям</a></li>
                         </ul>
                     </li>
                     <li class="header__navigation-list__item"><a href="" class="nav__link">Документы</a></li>
@@ -78,17 +79,15 @@
                             <li><a href="standards.html" class="nav__link active">Нормативы</a></li>
                             <li><a href="services.html" class="nav__link ">Услуги</a></li>
                             <li><a href="quality.html" class="nav__link">Показатели качества</a></li>
+                            <li><a href="connect.html" class="nav__link">Подключение к сетям</a></li>
                         </ul>
                     </nav>
                 </div>
             </aside>
             <article class="page__content-body ">
                 <div class="content__row box">
-                    <h1>Нормативы потребления </h1>
-
-
-
-
+                    <p>Нормативы потребления коммунальных услуг по холодному водоснабжению и водоотведению в жилых помещениях в муниципальных образованиях Кировской области.</p>
+                    <p>Утверждены распоряжением департамента жилищно-коммунального хозяйства Кировской области №-99-р от 24.12.2014г.</p>
                 </div>
             </article>
         </div>
