--- a/connect.html
+++ b/connect.html
@@ -1,207 +1,232 @@
 <!DOCTYPE html>
 <html lang="ru">
-
-<head>
-
-    <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
     <!-- <base href="/"> -->
 
     <title>Муп Водоканал</title>
-    <meta name="description" content="Оффициальный сайт МУП Водоканал г. Яранск">
+    <meta name="description" content="Оффициальный сайт МУП Водоканал г. Яранск" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
 
-    <link rel="icon" href="images/favicon.png">
+    <link rel="icon" href="images/favicon.png" />
     <!--	<meta property="og:image" content="images/preview.jpg">-->
 
     <!--	<link rel="stylesheet" href="libs/bootstrap/css/bootstrap-reboot.min.css">-->
     <!--	<link rel="stylesheet" href="libs/bootstrap/css/bootstrap-grid.min.css">-->
 
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/media.css">
-
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/media.css" />
 
     <script src="libs/jquery/jquery-3.6.0.min.js" defer></script>
     <script src="js/common.js" defer></script>
+  </head>
 
-</head>
-
-<body>
-
-<header class="header">
-    <div class="header__top">
+  <body>
+    <header class="header">
+      <div class="header__top">
         <div class="header__top-links container">
-            <a href="#">г. Яранск ул. Кирова д. 36</a>
-            <a href="#">8 (800) 123 45 56</a>
+          <a href="https://yandex.ru/maps/org/103389193980" target="_blank"
+            >г. Яранск ул. Кирова д. 36</a
+          >
+          <a href="tel:+7 (800) 123 45 56">8 (800) 123 45 56</a>
         </div>
-    </div>
-    <div class="header__main">
+      </div>
+      <div class="header__main">
         <div class="header__main-body container">
-            <a href="index.html" class="header__main-logo">
-                <img src="images/icons/logo.svg" alt="logo" class="logo image">
-            </a>
-            <nav class="header__main-navigation">
-                <ul class="header__navigation-list">
-                    <li class="header__navigation-list__item"><a href="about.html" class="nav__link">О предприятии</a></li>
-                    <li class="header__navigation-list__item"><a href="news.html" class="nav__link">Новости</a></li>
-                    <li class="header__navigation-list__item">
-                        <a class="nav__link">Абонентам</a>
-                        <ul class="navigation__sub-menu box">
-                            <li><a href="tarif.html" class="nav__link">Тарифы</a></li>
-                            <li><a href="standards.html" class="nav__link">Нормативы</a></li>
-                            <li><a href="services.html" class="nav__link">Услуги</a></li>
-                            <li><a href="quality.html" class="nav__link">Показатели качества</a></li>
-                            <li><a href="connect.html" class="nav__link">Подключение к сетям</a></li>
-                        </ul>
-                    </li>
-                    <li class="header__navigation-list__item"><a href="" class="nav__link">Документы</a></li>
-                    <li class="header__navigation-list__item"><a href="contacts.html" class="nav__link">Контакты</a></li>
+          <a href="index.html" class="header__main-logo">
+            <img src="images/icons/logo.svg" alt="logo" class="logo image" />
+          </a>
+          <nav class="header__main-navigation">
+            <ul class="header__navigation-list">
+              <li class="header__navigation-list__item">
+                <a href="about.html" class="nav__link">О предприятии</a>
+              </li>
+              <li class="header__navigation-list__item">
+                <a href="news.html" class="nav__link">Новости</a>
+              </li>
+              <li class="header__navigation-list__item">
+                <a class="nav__link">Абонентам</a>
+                <ul class="navigation__sub-menu box">
+                  <li><a href="tarif.html" class="nav__link">Тарифы</a></li>
+                  <li><a href="standards.html" class="nav__link">Нормативы</a></li>
+                  <li><a href="services.html" class="nav__link">Услуги</a></li>
+                  <li><a href="quality.html" class="nav__link">Показатели качества</a></li>
+                  <li><a href="connect.html" class="nav__link">Подключение к сетям</a></li>
                 </ul>
-            </nav>
-        </div>
-    </div>
-</header>
+              </li>
+              <li class="header__navigation-list__item">
+                <a href="" class="nav__link">Документы</a>
+              </li>
+              <li class="header__navigation-list__item">
+                <a href="contacts.html" class="nav__link">Контакты</a>
+              </li>
+            </ul>
+          </nav>
 
-<main>
-    <section class="page__title">
+          <div class="mobile__navigation-button">
+            <button class="mobile__burger">
+              <span></span>
+            </button>
+          </div>
+          <nav class="mobile__navigation">
+            <ul class="header__navigation-list">
+              <li class="header__navigation-list__item">
+                <a href="about.html" class="nav__link">О предприятии</a>
+              </li>
+              <li class="header__navigation-list__item">
+                <a href="news.html" class="nav__link">Новости</a>
+              </li>
+              <li class="header__navigation-list__item">
+                <a class="nav__link">Абонентам</a>
+                <ul class="navigation__sub-menu box">
+                  <li><a href="tarif.html" class="nav__link">Тарифы</a></li>
+                  <li><a href="standards.html" class="nav__link">Нормативы</a></li>
+                  <li><a href="services.html" class="nav__link">Услуги</a></li>
+                  <li><a href="quality.html" class="nav__link">Показатели качества</a></li>
+                  <li><a href="connect.html" class="nav__link">Подключение к сетям</a></li>
+                </ul>
+              </li>
+              <li class="header__navigation-list__item">
+                <a href="" class="nav__link">Документы</a>
+              </li>
+              <li class="header__navigation-list__item">
+                <a href="contacts.html" class="nav__link">Контакты</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
+
+    <main>
+      <section class="page__title">
         <div class="page__title-body container">
-            <h1 class="title">Нормативы потребления коммунальных услуг</h1>
+          <h1 class="title">Нормативы потребления коммунальных услуг</h1>
         </div>
-    </section>
+      </section>
 
-    <section class="page__content">
+      <section class="page__content">
         <div class="page__content-wrapper row container">
-            <aside class="page__sidebar">
-                <div class="content__row box">
-                    <nav class="page__sidebar-nav">
-                        <ul class="page__sidebar-nav__list">
-                            <li><a href="tarif.html" class="nav__link">Тарифы</a></li>
-                            <li><a href="standards.html" class="nav__link ">Нормативы</a></li>
-                            <li><a href="services.html" class="nav__link ">Услуги</a></li>
-                            <li><a href="quality.html" class="nav__link">Показатели качества</a></li>
-                            <li><a href="quality.html" class="nav__link active">Подключение к сетям</a></li>
-
-                        </ul>
-                    </nav>
-                </div>
-            </aside>
-            <article class="page__content-body ">
-                <div class="content__row box">
-                    <h1>Порядок подключения к сетям водоснабжения и водоотведения</h1>
-
-                </div>
-            </article>
-        </div>
-    </section>
-
-</main>
-
-<footer >
-    <div class="footer__main">
-        <div class="container">
-            <div class="footer__row row">
-                <div class="footer__nav">
-                    <div class="footer__nav-item">
-                        <div class="footer__heading"><a href="#" class="footer__nav-link">О предприятии</a></div>
-                        <div class="footer__heading"><a href="#" class="footer__nav-link">Документы</a></div>
-                        <div class="footer__heading"><a href="#" class="footer__nav-link">Новости</a></div>
-                    </div>
-
-                    <div class="footer__nav-item">
-                        <div class="footer__heading">Контакты</div>
-                        <ul class="footer__nav-list">
-                            <li>
-                                <span>Диспетчер</span>
-                                <a href="#" class="footer__nav-link">8 (83367) 2-22-22
-                                </a>
-                            </li>
-                            <li>
-                                <span>Бухгалтерия</span>
-                                <a href="#" class="footer__nav-link">8 (83367) 2-22-22
-                                </a>
-                            </li>
-                            <li>
-                                <span>Касса</span>
-                                <a href="#" class="footer__nav-link">8 (83367) 2-22-22
-                                </a>
-                            </li>
-                            <li>
-                                <span>Юрист</span>
-                                <a href="#" class="footer__nav-link">8 (83367) 2-22-22
-                                </a>
-                            </li>
-                            <li>
-                                <span>Директор</span>
-                                <a href="#" class="footer__nav-link">8 (83367) 2-22-22
-                                </a>
-                            </li>
-
-                        </ul>
-                    </div>
-
-                    <div class="footer__nav-item">
-                        <div class="footer__heading">Абонентам</div>
-                        <ul class="footer__nav-list">
-                            <li>
-                                <a href="#" class="footer__nav-link">Режим работы
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="footer__nav-link">Способы оплаты
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="footer__nav-link">Приборы учета
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="footer__nav-link">Тарифы
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="footer__nav-link">Обратная связь
-                                </a>
-                            </li>
-
-                        </ul>
-                    </div>
-
-                    <div class="footer__nav-item">
-
-                        <div class="footer__logo">
-                            <img src="images/icons/logoL.svg" class="logo image" alt="">
-                        </div>
-                        <div class="footer__social">
-                            <a href="#">
-                                <i class="footer__social-icon">
-                                    <img src="images/icons/tgIcon.svg" class="image" alt="">
-                                </i>
-                            </a>
-                            <a href="#">
-                                <i class="footer__social-icon">
-                                    <img src="images/icons/vkIcon.svg" class="image" alt="">
-                                </i>
-                            </a>
-                            <a href="#">
-                                <i class="footer__social-icon">
-                                    <img src="images/icons/mailIcon.svg" class="image" alt="">
-                                </i>
-                            </a>
-                        </div>
-                        <div class="footer__info-item">
-                            <span>г. Яранск ул. Кирова, 36</span>
-                        </div>
-
-                    </div>
-                </div>
-
+          <aside class="page__sidebar">
+            <div class="content__row box">
+              <nav class="page__sidebar-nav">
+                <ul class="page__sidebar-nav__list">
+                  <li><a href="tarif.html" class="nav__link">Тарифы</a></li>
+                  <li><a href="standards.html" class="nav__link">Нормативы</a></li>
+                  <li><a href="services.html" class="nav__link">Услуги</a></li>
+                  <li><a href="quality.html" class="nav__link">Показатели качества</a></li>
+                  <li><a href="quality.html" class="nav__link active">Подключение к сетям</a></li>
+                </ul>
+              </nav>
             </div>
+          </aside>
+          <article class="page__content-body">
+            <div class="content__row box">
+              <h1>Порядок подключения к сетям водоснабжения и водоотведения</h1>
+            </div>
+          </article>
         </div>
-    </div>
-    <div class="footer__bottom">
-        <span>2023 © МУП Водоканал г. Яранск</span>
-    </div>
-</footer>
+      </section>
+    </main>
 
-</body>
+    <footer>
+      <div class="footer__main">
+        <div class="container">
+          <div class="footer__row row">
+            <div class="footer__nav">
+              <div class="footer__nav-item">
+                <div class="footer__heading">
+                  <a href="#" class="footer__nav-link">О предприятии</a>
+                </div>
+                <div class="footer__heading">
+                  <a href="#" class="footer__nav-link">Документы</a>
+                </div>
+                <div class="footer__heading"><a href="#" class="footer__nav-link">Новости</a></div>
+              </div>
+
+              <div class="footer__nav-item">
+                <div class="footer__heading">Контакты</div>
+                <ul class="footer__nav-list">
+                  <li>
+                    <span>Диспетчер</span>
+                    <a href="#" class="footer__nav-link">8 (83367) 2-22-22 </a>
+                  </li>
+                  <li>
+                    <span>Бухгалтерия</span>
+                    <a href="#" class="footer__nav-link">8 (83367) 2-22-22 </a>
+                  </li>
+                  <li>
+                    <span>Касса</span>
+                    <a href="#" class="footer__nav-link">8 (83367) 2-22-22 </a>
+                  </li>
+                  <li>
+                    <span>Юрист</span>
+                    <a href="#" class="footer__nav-link">8 (83367) 2-22-22 </a>
+                  </li>
+                  <li>
+                    <span>Директор</span>
+                    <a href="#" class="footer__nav-link">8 (83367) 2-22-22 </a>
+                  </li>
+                </ul>
+              </div>
+
+              <div class="footer__nav-item">
+                <div class="footer__heading">Абонентам</div>
+                <ul class="footer__nav-list">
+                  <li>
+                    <a href="#" class="footer__nav-link">Режим работы </a>
+                  </li>
+                  <li>
+                    <a href="#" class="footer__nav-link">Способы оплаты </a>
+                  </li>
+                  <li>
+                    <a href="#" class="footer__nav-link">Приборы учета </a>
+                  </li>
+                  <li>
+                    <a href="#" class="footer__nav-link">Тарифы </a>
+                  </li>
+                  <li>
+                    <a href="#" class="footer__nav-link">Обратная связь </a>
+                  </li>
+                </ul>
+              </div>
+
+              <div class="footer__nav-item">
+                <div class="footer__logo">
+                  <img src="images/icons/logoL.svg" class="logo image" alt="" />
+                </div>
+                <div class="footer__social">
+                  <a href="#">
+                    <i class="footer__social-icon">
+                      <img src="images/icons/tgIcon.svg" class="image" alt="" />
+                    </i>
+                  </a>
+                  <a href="#">
+                    <i class="footer__social-icon">
+                      <img src="images/icons/vkIcon.svg" class="image" alt="" />
+                    </i>
+                  </a>
+                  <a href="#">
+                    <i class="footer__social-icon">
+                      <img src="images/icons/mailIcon.svg" class="image" alt="" />
+                    </i>
+                  </a>
+                </div>
+                <div class="footer__info-item">
+                  <span>г. Яранск ул. Кирова, 36</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer__bottom">
+        <span>2023 © МУП Водоканал г. Яранск</span>
+      </div>
+    </footer>
+  </body>
 </html>
